--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,29 @@
-<div>
+<style>
+    #menu {
+      text-align: center;
+    }
+  
+    #menu a {
+      display: inline-block;
+      margin: 10px;
+      padding: 10px 20px;
+      background-color: #f2f2f2;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+  
+    #menu a:hover {
+      background-color: #ddd;
+    }
+  </style>
+  
+  <div id="menu">
     <a href="/">Home</a>
     <a href="/register">Register</a>
     <a href="/review">Reviews</a>
     <a href="/sitemap">Sitemap</a>
-</div>
+  </div>
+  
