--- a/static/css/sitemap.css
+++ b/static/css/sitemap.css
@@ -2,8 +2,8 @@
   height: 30px;
   width: 30px;
   border-radius: 50%;
-  background-color: #008000;
-  color: white;
+  background-color: #D9D9D9;
+  color: #000;
   display: flex;
   align-items: center;
   justify-content: center;
