--- a/templates/menu.html
+++ b/templates/menu.html
@@ -21,9 +21,9 @@
   </style>
   
   <div id="menu">
-    <a href="/">Home</a>
+    <!-- <a href="/">Home</a> -->
     <a href="/register">Register</a>
     <a href="/review">Reviews</a>
-    <a href="/sitemap">Sitemap</a>
+    <!-- <a href="/sitemap">Sitemap</a> -->
   </div>
   
