--- a/templates/register.html
+++ b/templates/register.html
@@ -1,75 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Welcome to the Nigerian Air Force Museum and Archives</title>
-    <link rel="stylesheet" href="../static/css/register.css" />
-    <link href="{{url_for('static', filename='images/favicon.ico')}}" rel="shortcut icon" type="image/x-icon">
-    <link href="{{url_for('static', filename='images/webclip.png')}}" rel="apple-touch-icon">
-  </head>
-  <body>
-    <div class="video-container">
-      <video autoplay loop muted>
-        <source
-          src="{{url_for('static', filename='videos/welcome1.mp4')}}"
-          type="video/mp4"
-        />
-      </video>
-    </div>
-
-    <!-- HEADER -->
-    <style>
-      .menu{
-        display: flex;
-        flex-direction: row; 
-        align-content: center;
-        justify-content: center;
-        justify-self: center; 
-      }
-
-      .menu-item{ 
-        padding: 1rem; 
-        text-align: center;
-        font-size: 2rem; 
-      }
-
-      /*https://codepen.io/alvarotrigo/pen/PoKMyNO*/
-      .animate-character
-      {
-        text-transform: uppercase;
-        background-image: linear-gradient(
-          -225deg,
-          #ffa500 0%,
-          #fff800 29%,
-          #ee82ee 67%,
-          #fff 100%
-        );
-        background-size: auto auto;
-        background-clip: border-box;
-        background-size: 200% auto;
-        color: #fff;
-        background-clip: text;
-        text-fill-color: transparent;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        animation: textclip 10s linear infinite;
-        display: inline-block; 
-      }
-
-      @keyframes textclip {
-        to {
-          background-position: 200% center;
-        }
-      }
-    </style>
-
-
-    <div class="title-wrapper menu">
-      <div class="title-logo menu-item"><img src="{{url_for('static', filename='images/NIGERIAN-FLAG-TITLE_1NIGERIAN FLAG TITLE.jpg')}}" loading="lazy" alt="" class="image-airforce-logo"></div>
-      <div class="title_text menu-item" style="color: #fff">
-        <div class="text-block title-text animate-character">WELCOME TO THE NAF MUSEUM & ARCHIVES</div> 
-      </div>
-      <div class="title-logo menu-item"><img style="margin-top: -.4rem;" src="{{url_for('static', filename='images/AIR-FORCE-LOGO.jpg')}}" loading="lazy" sizes="55.99609375px" srcset="static/images/AIR-FORCE-LOGO-p-500.png 500w, images/AIR-FORCE-LOGO-p-800.png 800w, images/AIR-FORCE-LOGO-p-1080.png 1080w, images/AIR-FORCE-LOGO.png 1424w" alt="" class="image-2"></div>
-    </div> 
+    {%include 'head.html'%}
+    {%include 'header.html'%}
     {%include 'menu.html'%}
     <div class="" style="text-align: center" id="book">
       <!--<h1>Nigerian Air Force Museum and Archives</h1>-->
@@ -210,7 +140,7 @@
                   y="80"
                   width="200"
                   height="200"
-                  href="static/images/AIR-FORCE-LOGO.png"
+                  href="static/images/nysclogo.svg.png"
                   alt="Logo"
                 />
                 <text
@@ -222,7 +152,7 @@
                   fill="#333333"
                   style="fill: #83c5d6; font-family: 'Helvetica', sans-serif"
                 >
-                  NAF MUSEUM 
+                  NYSC MUSEUM 
                 </text>                 
                 <text
                   x="200"
