--- a/templates/menu.html
+++ b/templates/menu.html
@@ -18,12 +18,36 @@
     #menu a:hover {
       background-color: #ddd;
     }
+
+.current-page {
+    background-color: #0000 !important;
+    color: #ffff !important;
+}
+
   </style>
   
   <div id="menu">
-    <!-- <a href="/">Home</a> -->
     <a href="/register">Register</a>
     <a href="/review">Reviews</a>
-    <!-- <a href="/sitemap">Sitemap</a> -->
   </div>
   
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+    // Get the current URL
+    var currentUrl = window.location.pathname;
+
+    // Get all the anchor tags inside the menu div
+    var menuLinks = document.querySelectorAll('#menu a');
+
+    // Loop through each menu link
+    menuLinks.forEach(function(link) {
+        // Check if the href attribute matches the current URL
+        if (link.getAttribute('href') === currentUrl) {
+            // Add a class or any indicator to show that this link corresponds to the current page
+            link.classList.add('current-page'); // For example, adding a class
+        }
+    });
+});
+
+  </script>
