--- a/templates/register.html
+++ b/templates/register.html
@@ -80,8 +80,13 @@
               height: 3.5rem;
               width: 3.5rem;
               border-radius: 0%;" src="{{url_for('static', filename='images/pen-black.png')}}"/>
-            <img  class="pen-color" style="border: 2px solid white; padding: .2rem;
+            <!-- <img  class="pen-color" style="border: 2px solid white; padding: .2rem;
               background-color: red; opacity: .6;
+              height: 3.5rem;
+              width: 3.5rem;
+              border-radius: 0%;" src="{{url_for('static', filename='images/pen-black.png')}}"/>   -->
+            <img  class="pen-color" style="border: 2px solid white; padding: .2rem;
+              background-color: green; opacity: .6;
               height: 3.5rem;
               width: 3.5rem;
               border-radius: 0%;" src="{{url_for('static', filename='images/pen-black.png')}}"/>  
