--- a/templates/review.html
+++ b/templates/review.html
@@ -145,7 +145,7 @@
                   y="80"
                   width="200"
                   height="200"
-                  href="static/images/nysclogo.svg.png"
+                  href="static/images/coa.png"
                   alt="Logo"
                 />
                 <text
