update book cover text

--- a/templates/head.html
+++ b/templates/head.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WELCOME TO NYSC MUSEUM OF DYNAMIC HISTORY</title>
+    <title>WELCOME TO ENUGU STATE DIGITAL EXPERIENCE CENTER</title>
     <link rel="stylesheet" href="../static/css/register.css" />
     <link href="{{url_for('static', filename='images/favicon.ico')}}" rel="shortcut icon" type="image/x-icon">
     <link href="{{url_for('static', filename='images/webclip.png')}}" rel="apple-touch-icon">
