--- a/templates/register.html
+++ b/templates/register.html
@@ -152,27 +152,30 @@
                   x="200"
                   y="350"
                   font-family="Arial"
-                  font-size="36"
+                  font-size="30"
                   text-anchor="middle"
                   fill="#333333"
                   style="fill: #83c5d6; font-family: 'Helvetica', sans-serif"
                 >
-                  NYSC MUSEUM 
-                </text>                 
+                  <tspan x="200" dy="0">ENUGU STATE</tspan>
+                  <tspan x="200" dy="40">DIGITAL</tspan>
+                  <tspan x="200" dy="40">EXPERIENCE CENTER</tspan>
+                </text>
                 <text
                   x="200"
-                  y="400"
+                  y="470"
                   font-family="Arial"
                   font-size="24"
                   text-anchor="middle"
                   fill="#777777"
-                  style="fill: #83c5d6; font-family: 'Helvetica', sans-serif"
+                  style="fill: #83c5d6; font-family: 'Helvetica', sans-serif;"
                 >
                   Guest Register
                 </text>
               </svg>
             </div>
           </div>
+          
         </div>
       </div>
 
