--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <div class="title-wrapper menu">
-    <div class="title-logo menu-item"><img style="width: 55.99609375px;" src="{{url_for('static', filename='images/coa.png')}}" loading="lazy" alt="" class="enugu-logo"></div>
+    <div class="title-logo menu-item"><img style="width: 55.99609375px;" src="{{url_for('static', filename='images/nysclogo.svg.png')}}" loading="lazy" alt="" class="enugu-logo"></div>
     <div class="title_text menu-item" style="color: #fff">
-      <div class="text-block title-text animate-character">WELCOME TO ENUGU STATE DIGITAL EXPERIENCE CENTER</div> 
+      <div class="text-block title-text animate-character">WELCOME TO NYSC MUSEUM OF DYNAMIC HISTORY</div> 
     </div>
-    <div class="title-logo menu-item"><img style="width: 55.99609375px;" src="{{url_for('static', filename='images/coa.png')}}" loading="lazy" alt="" class="enugu-logo"></div>
+    <div class="title-logo menu-item"><img style="width: 55.99609375px;" src="{{url_for('static', filename='images/nysclogo.svg.png')}}" loading="lazy" alt="" class="enugu-logo"></div>
   </div>
