--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to the Nigerian Air Force Museum and Archives</title>
+    <title>WELCOME TO NYSC MUSEUM OF DYNAMIC HISTORY</title>
     <link rel="stylesheet" href="../static/css/register.css" />
     <link href="{{url_for('static', filename='images/favicon.ico')}}" rel="shortcut icon" type="image/x-icon">
     <link href="{{url_for('static', filename='images/webclip.png')}}" rel="apple-touch-icon">
