refactor: update logos and titles to reflect NAF Finance Specialty Hall of Fame; remove unused CSS and image files

--- a/templates/guest.html
+++ b/templates/guest.html
@@ -1,7 +1,6 @@
     {%include 'head.html'%}
     {%include 'header.html'%}
     <div class="" style="text-align: center" id="book">
-      <!--<h1>Nigerian Air Force Museum and Archives</h1>-->
       <div class="flipbook-viewport">
         <div class="container">
           <div class="stylus-container" id="canvasContainer">
@@ -35,12 +34,9 @@
                 <button style="width: fit-content" id="save" onclick="saveCanvas()">Save</button>    
                 <button style="width: fit-content;background-color: coral;" id="save" onclick="clearCanvas()">Clear</button> 
                 <button style="width: fit-content;background-color: grey;color:white;" id="delete" onclick="toggleEraser()">Erase</button> 
-                <!--<button style="width: fit-content" id="save" onclick="cancelCanvas()">Cancel</button>-->
               </div>
-              <!-- <button style="width: fit-content">Reset</button> -->
             </div>
           </div>
-          <!-- <button style="width: fit-content" id="signIn">Sign In</button> -->
           <div class="pen-colors" id="colors" style="padding-left: 200px;">
             <img  class="pen-color" style="border: 2px solid white; padding: .2rem;
               background-color: blue; opacity: .6;
@@ -85,8 +81,8 @@
                   y="80"
                   width="200"
                   height="200"
-                  href="static/images/nysclogo.svg.png"
-                  alt="Logo"
+                  href="static/images/finance-specialty-logo.png"
+                  alt="NAF Logo"
                 />
                 <text
                   x="200"
@@ -97,9 +93,9 @@
                   fill="#333333"
                   style="fill: #83c5d6; font-family: 'Helvetica', sans-serif"
                 >
-                  <tspan x="200" dy="0">NYSC MUSEUM</tspan>
-                  <tspan x="200" dy="40">OF</tspan>
-                  <tspan x="200" dy="40">DYNAMIC HISTORY</tspan>
+                  <tspan x="200" dy="0">NAF FINANCE</tspan>
+                  <tspan x="200" dy="40">SPECIALTY</tspan>
+                  <tspan x="200" dy="40">HALL OF FAME</tspan>
                 </text>
                 <text
                   x="200"
@@ -110,7 +106,7 @@
                   fill="#777777"
                   style="fill: #83c5d6; font-family: 'Helvetica', sans-serif;"
                 >
-                  Guest Register
+                  Visitor Register
                 </text>
               </svg>
             </div>
