--- a/templates/head.html
+++ b/templates/head.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WELCOME TO NYSC MUSEUM OF DYNAMIC HISTORY</title>
+    <title>WELCOME TO NAF FINANCE SPECIALTY HALL OF FAME</title>
     <link rel="stylesheet" href="../static/css/register.css" />
-    <link href="{{url_for('static', filename='images/favicon.ico')}}" rel="shortcut icon" type="image/x-icon">
-    <link href="{{url_for('static', filename='images/webclip.png')}}" rel="apple-touch-icon">
+    <link href="{{url_for('static', filename='images/finance-specialty-logo.png')}}" rel="shortcut icon" type="image/x-icon">
+    <link href="{{url_for('static', filename='images/finance-specialty-logo.png')}}" rel="apple-touch-icon">
   </head>
   <body>
     <div class="video-container">
