fix: correct text from 'Visitor Register' to 'Visitors Register'

--- a/templates/guest.html
+++ b/templates/guest.html
@@ -106,7 +106,7 @@
                   fill="#777777"
                   style="fill: #83c5d6; font-family: 'Helvetica', sans-serif;"
                 >
-                  Visitor Register
+                  Visitors Register
                 </text>
               </svg>
             </div>
